Pdf category api response qoshildi. Search olib tashlandi