@@ -1,5 +1,8 @@
 package aifu.project.libraryweb.service.pdf_book_service;
 
+import aifu.project.common_domain.dto.ResponseMessage;
+import aifu.project.common_domain.exceptions.CategoryNotFoundException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -10,11 +13,13 @@ import aifu.project.common_domain.entity.Category;
 import aifu.project.common_domain.mapper.CategoryMapper;
 import aifu.project.libraryweb.repository.CategoryRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class CategoryServiceImpl implements CategoryService {
@@ -51,34 +56,31 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public Category getById(Integer id) {
         return categoryRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Category not found with id: " + id));
+                .orElseThrow(() -> new CategoryNotFoundException("Category not found with id: " + id));
     }
 
     @Override
-    public List<CategoryResponseDTO> getAll() {
-        return categoryRepository.findAll()
+    public ResponseEntity<ResponseMessage> getAll(String sortDirection) {
+        Sort.Direction direction = sortDirection.equalsIgnoreCase("asc") ? Sort.Direction.ASC : Sort.Direction.DESC;
+        List<CategoryResponseDTO> categories = categoryRepository.findAll(Sort.by(direction, "id"))
                 .stream()
                 .map(CategoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        log.info("categories: {}", categories);
+        log.info("categories size: {}", categories.size());
+
+        return ResponseEntity.ok(new ResponseMessage(true, "Categories retrieved successfully", categories));
     }
 
     @Override
-    public Page<CategoryResponseDTO> search(CategorySearchCriteriaDTO criteria) {
-        Sort.Direction direction = criteria.getSortDr().equalsIgnoreCase("desc") ? Sort.Direction.DESC : Sort.Direction.ASC;
-        Pageable pageable = PageRequest.of(criteria.getPageNumber() - 1, criteria.getSize(), Sort.by(direction, criteria.getSortBy()));
+    public ResponseEntity<ResponseMessage> get(Integer id) {
+        Category category = getById(id);
 
-        Page<Category> categoryPage;
-        if (criteria.getId() != null) {
-            Category found = categoryRepository.findById(criteria.getId())
-                    .orElse(null);
-            List<Category> single = found == null ? List.of() : List.of(found);
-            categoryPage = new PageImpl<>(single, pageable, single.size());
-        } else if (criteria.getName() != null && !criteria.getName().isBlank()) {
-            categoryPage = categoryRepository.findByNameContainingIgnoreCase(criteria.getName(), pageable);
-        } else {
-            categoryPage = categoryRepository.findAll(pageable);
-        }
+        log.info("Getting category with id: {} -> category {}", id, category);
 
-        return categoryPage.map(CategoryMapper::toDto);
+        CategoryResponseDTO dto = CategoryMapper.toDto(category);
+        return ResponseEntity.ok(new ResponseMessage(true, "Category successfully retrieved", dto));
     }
+
 }
